--- a/src/client/views/layout.pug
+++ b/src/client/views/layout.pug
@@ -1,8 +1,21 @@
 doctype html
 html(lang='ko')
 	head
-		//- title Youbox
 		title #{pageTitle} | Youbox
+		link(rel="stylesheet" href="https://unpkg.com/mvp.css")
 	body
-		block content
+		header
+			if fakeUser.loggedIn
+				span Hello #{fakeUser.username}
+			nav
+				ul
+					if fakeUser.loggedIn
+						li
+							a(href='logout') Logout
+					else
+						li
+							a(href='/login') Login
+			h1=pageTitle
+		main
+			block content
 		include ../components/footer
