--- a/src/client/views/layout.pug
+++ b/src/client/views/layout.pug
@@ -15,6 +15,8 @@ html(lang='ko')
 					else
 						li
 							a(href='/login') Login
+					li
+						a(href='/videos/upload') Upload
 			h1=pageTitle
 		main
 			block content
