--- a/src/client/components/videoThumb.pug
+++ b/src/client/components/videoThumb.pug
@@ -2,8 +2,9 @@ mixin video(data)
 	div
 		h4
 			a(href=`/videos/${data.id}`)=data.title
+		p=data.description
+		hr
+		small=data.createdAt
 		ul
-			li #{data.rating} / 5
-			li #{data.comments} comments
-			li Posted #{data.createdAt}
-			li #{data.views} views
+			li #{data.meta.rating} / 5
+			li #{data.meta.views} views
