--- a/src/client/views/video/upload.pug
+++ b/src/client/views/video/upload.pug
@@ -1,6 +1,11 @@
 extends ../layout
 
 block content
+	if errorMessage
+		span=errorMessage 
+
 	form(method="POST")
-		input(name="title" required placeholder="Title")
+		input(name="title" required placeholder="Title" maxlength=80)
+		textarea(name="description" required placeholder="Description" minlength=20)
+		input(name="hashtags" required placeholder="Hashtags, separated by comma")
 		input(type="submit", value="Upload")
