--- a/src/client/views/layout.pug
+++ b/src/client/views/layout.pug
@@ -17,6 +17,8 @@ html(lang='ko')
 							a(href='/login') Login
 					li
 						a(href='/videos/upload') Upload
+					li
+						a(href='/') Home
 			h1=pageTitle
 		main
 			block content
