--- a/src/client/views/video/watch.pug
+++ b/src/client/views/video/watch.pug
@@ -1,5 +1,9 @@
 extends ../layout
 
 block content
-	h3 #{video.views} #{video.views < 2 ? "view" :"views"}
+	div
+		p=video.description
+		small=video.createdAt
+		
+	h3 #{video.meta.views} #{video.meta.views < 2 ? "view" :"views"}
 	a(href=`${video.id}/edit`) Edit Video &rarr;
