feat add search videos function

--- a/src/client/views/layout.pug
+++ b/src/client/views/layout.pug
@@ -18,6 +18,8 @@ html(lang='ko')
 					li
 						a(href='/videos/upload') Upload
 					li
+						a(href='/search') Search
+					li
 						a(href='/') Home
 			h1=pageTitle
 		main
