feat: make user model

--- a/src/client/views/layout.pug
+++ b/src/client/views/layout.pug
@@ -5,22 +5,24 @@ html(lang='ko')
 		link(rel="stylesheet" href="https://unpkg.com/mvp.css")
 	body
 		header
-			if fakeUser.loggedIn
-				span Hello #{fakeUser.username}
+			//- if fakeUser.loggedIn
+			//- 	span Hello #{fakeUser.username}
 			nav
 				ul
-					if fakeUser.loggedIn
-						li
-							a(href='logout') Logout
-					else
-						li
-							a(href='/login') Login
+					//- if fakeUser.loggedIn
+					//- 	li
+					//- 		a(href='logout') Logout
+					//- else
+					//- 	li
+					//- 		a(href='/login') Login
 					li
 						a(href='/videos/upload') Upload
 					li
 						a(href='/search') Search
 					li
 						a(href='/') Home
+					li
+						a(href='/join') Join
 			h1=pageTitle
 		main
 			block content
