--- a/src/client/views/join.pug
+++ b/src/client/views/join.pug
@@ -1,10 +1,14 @@
 extends layout
 
 block content
+	if errorMessage
+		span=errorMessage 
+
 	form(method="POST")
 		input(type="text", name="email", placeholder="Email", required)
 		input(type="text", name="username", placeholder="user's name", required)
 		input(type="password", name="password", placeholder="Password", required)
+		input(type="password", name="passwordConfirm", placeholder="Password Confirm", required)
 		input(type="text", name="name", placeholder="Name", required)
 		input(type="text", name="location", placeholder="Location")
 		input(type="submit", value="Join")
