--- a/src/client/views/user/join.pug
+++ b/src/client/views/user/join.pug
@@ -1,4 +1,4 @@
-extends layout
+extends ../layout
 
 block content
 	if errorMessage
@@ -12,3 +12,10 @@ block content
 		input(type="text", name="name", placeholder="Name", required)
 		input(type="text", name="location", placeholder="Location")
 		input(type="submit", value="Join")
+
+	hr
+
+	div 
+		span Already have an account?
+		br
+		a(href="/login") Log in now &rarr;
