--- a/src/client/views/user/login.pug
+++ b/src/client/views/user/login.pug
@@ -11,6 +11,10 @@ block content
 
 	hr
 
+	a(href="/users/github/start") Continue with Github &rarr;
+
+	hr
+
 	div 
 		span Don't have an account?
 		br
