--- a/src/client/views/layout.pug
+++ b/src/client/views/layout.pug
@@ -11,6 +11,8 @@ html(lang='ko')
 				ul
 					if loggedIn
 						li
+							a(href='/users/edit') Edit Profile
+						li
 							a(href='/logout') Logout
 					else
 						li
