--- a/src/client/views/user/edit.pug
+++ b/src/client/views/user/edit.pug
@@ -4,7 +4,12 @@ block content
 	if errorMessage
 		span=errorMessage 
 
-	form(method="POST")
+	if loggedInUser.avatarUrl
+		img(src=`/${loggedInUser.avatarUrl}` alt="" width="100" height="100")
+
+	form(method="POST" enctype="multipart/form-data")
+		label(for="avatar") Avatar
+		input(type="file", name="avatar", id="avatar", accept="image/*")
 		input(type="text", name="name", placeholder="Name", required, value=loggedInUser.name)
 		input(type="email", name="email", placeholder="Email", required, value=loggedInUser.email)
 		input(type="text", name="username", placeholder="User's name", required, value=loggedInUser.username)
