--- a/src/client/views/video/upload.pug
+++ b/src/client/views/video/upload.pug
@@ -4,7 +4,9 @@ block content
 	if errorMessage
 		span=errorMessage 
 
-	form(method="POST")
+	form(method="POST" enctype="multipart/form-data")
+		label(for="video") Video File
+		input(type="file", accept="video/*" required id="video" name="video")
 		input(name="title" required placeholder="Title" maxlength=80)
 		textarea(name="description" required placeholder="Description" minlength=20)
 		input(name="hashtags" required placeholder="Hashtags, separated by comma")
