--- a/src/client/views/layout.pug
+++ b/src/client/views/layout.pug
@@ -13,6 +13,8 @@ html(lang='ko')
 						li
 							a(href='/users/edit') Edit Profile
 						li
+							a(href=`/users/${loggedInUser._id}`) My Profile
+						li
 							a(href='/logout') Logout
 						li
 							a(href='/videos/upload') Upload
