--- a/src/client/views/user/edit.pug
+++ b/src/client/views/user/edit.pug
@@ -5,7 +5,10 @@ block content
 		span=errorMessage 
 
 	if loggedInUser.avatarUrl
-		img(src=`/${loggedInUser.avatarUrl}` alt="" width="100" height="100")
+		if(loggedInUser.avatarUrl.includes('http'))
+			img(src=`${loggedInUser.avatarUrl}` alt="" width="100" height="100")
+		else
+			img(src=`/${loggedInUser.avatarUrl}` alt="" width="100" height="100")
 
 	form(method="POST" enctype="multipart/form-data")
 		label(for="avatar") Avatar
