--- a/src/client/views/video/watch.pug
+++ b/src/client/views/video/watch.pug
@@ -6,9 +6,15 @@ block content
 	div
 		p=video.description
 		small=video.createdAt
+		br
+		small Uploaded by 
+			a(href=`/users/${video.owner._id}`)=video.owner.name
 		
 	h3 #{video.meta.views} #{video.meta.views < 2 ? "view" :"views"}
-	a(href=`${video.id}/edit`) Edit Video &rarr;
-	br
-	a(href=`${video.id}/delete` onClick="return confirm('Are you sure deleting this video?')") Delete Video &rarr;
+
+	if loggedInUser
+		if String(video.owner._id) === String(loggedInUser._id)
+			a(href=`${video.id}/edit`) Edit Video &rarr;
+			br
+			a(href=`${video.id}/delete` onClick="return confirm('Are you sure deleting this video?')") Delete Video &rarr;
 	
