--- a/src/client/views/layout.pug
+++ b/src/client/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang='ko')
 	head
 		title #{pageTitle} | Youbox
-		link(rel="stylesheet" href="https://unpkg.com/mvp.css")
+		link(rel="stylesheet" href="/static/css/styles.css")
 	body
 		header
 			if loggedInUser
@@ -31,3 +31,4 @@ html(lang='ko')
 		main
 			block content
 		include ../components/footer
+		script(src='/static/js/index.js')
