--- a/src/client/views/layout.pug
+++ b/src/client/views/layout.pug
@@ -30,5 +30,5 @@ html(lang='ko')
 			h1=pageTitle
 		main
 			block content
-		include ../components/footer
+		include ./components/footer
 		script(src='/static/js/index.js')
