--- a/src/client/views/user/profile.pug
+++ b/src/client/views/user/profile.pug
@@ -1,5 +1,5 @@
 extends ../layout
-include ../../components/videoThumb
+include ../components/videoThumb
 
 block content
 	each video in user.videos
