--- a/src/client/views/layout.pug
+++ b/src/client/views/layout.pug
@@ -1,33 +1,11 @@
 doctype html
 html(lang='ko')
 	head
-		title #{pageTitle} | Youbox
+		title #{pageTitle} | Youbox\
+		link(rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard.css")
 		link(rel="stylesheet" href="/static/css/styles.css")
 	body
-		header
-			if loggedInUser
-				span Hello #{loggedInUser.username}
-			nav
-				ul
-					if loggedIn
-						li
-							a(href='/users/edit') Edit Profile
-						li
-							a(href=`/users/${loggedInUser._id}`) My Profile
-						li
-							a(href='/logout') Logout
-						li
-							a(href='/videos/upload') Upload
-					else
-						li
-							a(href='/login') Login
-						li
-							a(href='/join') Join
-					li
-						a(href='/search') Search
-					li
-						a(href='/') Home
-			h1=pageTitle
+		include ./components/header
 		main
 			block content
 		include ./components/footer
