feat: modify video part
style: video grid(home, search, profile), video mixin
controller: fetch video owner's data

--- a/src/client/views/layout.pug
+++ b/src/client/views/layout.pug
@@ -1,12 +1,12 @@
 doctype html
 html(lang='ko')
 	head
-		title #{pageTitle} | Youbox\
+		title #{pageTitle} | Youbox
 		link(rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard.css")
 		link(rel="stylesheet" href="/static/css/styles.css")
+		script(src='/static/js/index.js' defer)
 	body
 		include ./components/header
 		main
 			block content
 		include ./components/footer
-		script(src='/static/js/index.js')
