--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -5,13 +5,50 @@
 // Components
 @import './components/header';
 @import './components/footer';
+@import './components/shared';
+@import './components/video';
 
 // Screens
-//
 
 // Default
 body {
 	font-family: 'Pretendard', sans-serif;
 	background: $bg;
 	color: $color;
+}
+
+h1 {
+	font-size: 56px;
+	font-weight: 700;
+	line-height: 72px;
+}
+
+h2 {
+	font-size: 40px;
+	font-weight: 700;
+	line-height: 56px;
+}
+
+h3 {
+	font-size: 28px;
+	font-weight: 500;
+	line-height: 40px;
+}
+
+h4 {
+	font-size: 26px;
+	font-weight: 400;
+	line-height: 32px;
+}
+
+h5 {
+	font-size: 22px;
+	font-weight: 400;
+	line-height: 32px;
+}
+
+h6 {
+	font-size: 20px;
+	font-weight: 400;
+	line-height: 28px;
 }
