--- a/src/client/views/home.pug
+++ b/src/client/views/home.pug
@@ -2,9 +2,8 @@ extends layout
 include ./mixins/videoThumb
 
 block content
-	h2 Welcome
-
-	each data in videos
-		+video(data)
-	else
-		p There is no video.
+	div.video__grid
+		each data in videos
+			+video(data)
+		else
+			p.empty__message There is no video.
