--- a/src/client/scss/components/header.scss
+++ b/src/client/scss/components/header.scss
@@ -31,11 +31,13 @@ header {
 		}
 
 		button {
+			position: relative;
+
 			flex: 0 0 32px;
 			height: 32px;
 			border: none;
-			background: rgba($color: $darkPurple, $alpha: 0.2);
 			border-radius: 0 4px 4px 0;
+			background: rgba($color: $darkPurple, $alpha: 0.2);
 			cursor: pointer;
 
 			&:hover {
@@ -43,13 +45,22 @@ header {
 			}
 
 			&:active {
-				background: rgba($color: $darkPurple, $alpha: 1);
+				background: $darkPurple;
 			}
 
-			svg {
-				width: 60%;
-				height: 60%;
-				fill: $color;
+			&::before {
+				content: '';
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				background: $color;
+
+				mask: $icoSearch no-repeat center center;
+				mask-size: 60%;
+				-webkit-mask: $icoSearch no-repeat center center;
+				-webkit-mask-size: 60%;
 			}
 		}
 	}
@@ -127,7 +138,9 @@ header {
 		opacity: 0;
 		transform-origin: top center;
 
-		transition: scale 0.3s, opacity 0.3s;
+		visibility: hidden;
+
+		transition: all 0.3s;
 
 		li {
 			padding: 8px 16px;
@@ -140,6 +153,7 @@ header {
 	}
 
 	&.active > ul {
+		visibility: initial;
 		scale: 1 1;
 		opacity: 1;
 	}
