--- a/src/client/scss/components/shared.scss
+++ b/src/client/scss/components/shared.scss
@@ -25,3 +25,30 @@
 	font-size: 16px;
 	opacity: 0.5;
 }
+
+.avatar {
+	width: 160px;
+	height: 160px;
+	border-radius: 50%;
+	border: 1px solid $color;
+	overflow: hidden;
+
+	img {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
+}
+
+.avatar__empty {
+	display: inline-block;
+	width: 100%;
+	height: 100%;
+
+	background: $color;
+
+	mask: $icoUser no-repeat center center;
+	mask-size: 60%;
+	-webkit-mask: $icoUser no-repeat center center;
+	-webkit-mask-size: 60%;
+}
