--- a/src/client/views/user/changePassword.pug
+++ b/src/client/views/user/changePassword.pug
@@ -8,4 +8,4 @@ block content
 		input(type="password", name="originPassword", placeholder="Old Password", required)
 		input(type="password", name="newPassword", placeholder="New Password", required)
 		input(type="password", name="newPasswordConfirm", placeholder="New Password Confirm", required)
-		button Change Password
+		input(type="submit" value="Change Password")
