--- a/src/client/scss/components/shared.scss
+++ b/src/client/scss/components/shared.scss
@@ -4,7 +4,6 @@
 	grid-auto-rows: max-content;
 	gap: 24px;
 
-	min-height: 100vh;
 	padding: 32px;
 }
 
@@ -51,4 +50,32 @@
 	mask-size: 60%;
 	-webkit-mask: $icoUser no-repeat center center;
 	-webkit-mask-size: 60%;
+}
+
+.link-switch {
+	text-align: center;
+	margin: 0 auto;
+	padding: 40px 0;
+
+	a {
+		position: relative;
+		color: $darkPurple;
+
+		&::before {
+			content: '';
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			width: 100%;
+			height: 1px;
+			background: $darkPurple;
+			transform: scaleX(0);
+			transform-origin: left;
+			transition: transform 0.3s;
+		}
+
+		&:hover::before {
+			transform: scaleX(1);
+		}
+	}
 }
