--- a/src/client/views/user/edit.pug
+++ b/src/client/views/user/edit.pug
@@ -4,13 +4,13 @@ block content
 	if errorMessage
 		span=errorMessage 
 
-	if loggedInUser.avatarUrl
-		if(loggedInUser.avatarUrl.includes('http'))
-			img(src=`${loggedInUser.avatarUrl}` alt="" width="100" height="100")
-		else
-			img(src=`/${loggedInUser.avatarUrl}` alt="" width="100" height="100")
+	//- if loggedInUser.avatarUrl
+	//- 	if(loggedInUser.avatarUrl.includes('http'))
+	//- 		img(src=`${loggedInUser.avatarUrl}` alt="" width="100" height="100")
+	//- 	else
+	//- 		img(src=`/${loggedInUser.avatarUrl}` alt="" width="100" height="100")
 
-	form(method="POST" enctype="multipart/form-data")
+	form.edit-profile__form(method="POST" enctype="multipart/form-data")
 		label(for="avatar") Avatar
 		input(type="file", name="avatar", id="avatar", accept="image/*")
 		input(type="text", name="name", placeholder="Name", required, value=loggedInUser.name)
@@ -20,6 +20,6 @@ block content
 		input(type="submit", value="Edit Profile")
 
 	if !loggedInUser.socialOnly
-		hr
-		a(href='change-password') Change Password &rarr;
+		div.link-switch.edit-profile__password
+			a(href='change-password') Change Password &rarr;
 
