--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -9,6 +9,7 @@
 @import './components/video';
 @import './components/forms';
 @import './components/social-login';
+@import './components/video-player';
 
 // Screens
 @import './screens/profile';
@@ -58,5 +59,8 @@ h6 {
 }
 
 main {
+	max-width: 1200px;
+	width: 100%;
 	min-height: 100vh;
+	margin: 0 auto;
 }
