--- a/src/client/views/layout.pug
+++ b/src/client/views/layout.pug
@@ -1,3 +1,5 @@
+include ./mixins/message
+
 doctype html
 html(lang='ko')
 	head
@@ -6,6 +8,15 @@ html(lang='ko')
 		link(rel="stylesheet" href="/static/css/styles.css")
 		script(src='/static/js/header.js' defer)
 	body
+		if messages.error
+			+message('error',messages.error)
+		if messages.warn
+			+message('warn',messages.warn)
+		if messages.success
+			+message('success',messages.success)
+		if messages.info
+			+message('info',messages.info)
+			
 		include ./components/header
 		main
 			block content
