--- a/src/client/views/video/upload.pug
+++ b/src/client/views/video/upload.pug
@@ -4,8 +4,8 @@ block content
 	if errorMessage
 		span=errorMessage 
 
-	div
-		button#startBtn Start Record
+	//- div
+	//- 	button#startBtn Start Record
 
 	form(method="POST" enctype="multipart/form-data")
 		label(for="video") Video File
