--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -11,6 +11,7 @@
 @import './components/social-login';
 @import './components/video-player';
 @import './components/message';
+@import './components/not-found';
 
 // Screens
 @import './screens/profile';
