--- a/src/client/views/components/header.pug
+++ b/src/client/views/components/header.pug
@@ -10,7 +10,7 @@ header
 		if loggedIn
 			a(href="/videos/upload") Upload
 			div.header__menu-wrapper
-				span.header__avatar
+				span.header__avatar.avatar.medium
 					if !loggedInUser.avatarUrl
 						i.avatar__empty
 					else
