style: styling video watch page

--- a/src/client/scss/config/_variables.scss
+++ b/src/client/scss/config/_variables.scss
@@ -2,6 +2,8 @@ $bg: #161223;
 $color: #f6f4f0;
 $darkPurple: #7e5eff;
 $lightPurple: #d4caff;
+$grey: #666;
+
 $error: #eb4545;
 $warn: #ffef60;
 $success: #74ef74;
