working: working on video upload form(styling)

--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -17,6 +17,7 @@
 @import './screens/profile';
 @import './screens/edit-profile';
 @import './screens/watch';
+@import './screens/video-forms';
 
 // Default
 body {
