--- a/src/client/views/video/upload.pug
+++ b/src/client/views/video/upload.pug
@@ -5,13 +5,33 @@ block content
 	//- div
 	//- 	button#startBtn Start Record
 
-	form(method="POST" enctype="multipart/form-data")
-		label(for="video") Video File
-		input(type="file", accept="video/*" required id="video" name="video")
-		input(name="title" required placeholder="Title" maxlength=80)
-		textarea(name="description" required placeholder="Description" minlength=20)
-		input(name="hashtags" required placeholder="Hashtags, separated by comma")
-		input(type="submit", value="Upload")
+	section.preview 
+		h5 Preview
+		article.preview__part 
+			h6.preview__part-title Video
+			video#previewVideo.preview__part-media
+		article.preview__part 
+			h6.preview__part-title Thumbnail
+			image#previewThumb.preview__part-media
+
+	section.form
+		h5 Information
+
+		form(method="POST" enctype="multipart/form-data")
+			ul
+				li 
+					label(for="video") Video File
+					input(type="file", accept="video/*" required id="video" name="video")
+				li 
+					label Title
+					input(name="title" required maxlength=80)
+				li 
+					label Description
+					textarea(name="description" required minlength=20)
+				li 
+					label Hashtags(separated by comma)
+					input(name="hashtags" required)
+			input(type="submit", value="Upload")
 
 block scripts
 	script(src="/static/js/recorder.js") 
