--- a/src/client/views/video/upload.pug
+++ b/src/client/views/video/upload.pug
@@ -20,16 +20,23 @@ block content
 		form(method="POST" enctype="multipart/form-data")
 			ul
 				li 
-					label(for="video") Video File
+					p Video File
+					input(type="text" id="videoFileName" placeholder="Select video first" readonly)
+					label(for="video") Upload video
 					input(type="file", accept="video/*" required id="video" name="video")
 				li 
-					label Title
+					p Thumbnail File
+					input(type="text" id="thumbFileName" placeholder="Select thumbnail first" readonly)
+					label(for="thumbnail") Upload thumbnail
+					input(type="file", accept="image/*" required id="thumbnail" name="thumbnail")
+				li 
+					p Title
 					input(name="title" required maxlength=80)
 				li 
-					label Description
+					p Description
 					textarea(name="description" required minlength=20)
 				li 
-					label Hashtags(separated by comma)
+					p Hashtags(separated by comma)
 					input(name="hashtags" required)
 			input(type="submit", value="Upload")
 
