--- a/src/client/scss/components/video.scss
+++ b/src/client/scss/components/video.scss
@@ -3,6 +3,16 @@
 		height: 160px;
 		border-radius: 8px;
 		background-color: $lightPurple;
+		overflow: hidden;
+	}
+
+	.video-mixin__thumb {
+		& > img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			transition: scale 0.5s ease-in-out;
+		}
 	}
 
 	.video-mixin__data {
@@ -12,5 +22,9 @@
 	.video-mixin__meta {
 		font-size: 14px;
 		text-align: right;
+	}
+
+	&:hover .video-mixin__thumb > img {
+		scale: 1.05;
 	}
 }
