feat: add avatar component

--- a/src/client/scss/components/header.scss
+++ b/src/client/scss/components/header.scss
@@ -96,9 +96,11 @@ header {
 .header__menu-wrapper {
 	position: relative;
 
-	& > span {
-		display: block;
+	& .header__avatar {
 		cursor: pointer;
+		& > span {
+			display: block;
+		}
 	}
 
 	& > ul {
