--- a/src/client/views/video/watch.pug
+++ b/src/client/views/video/watch.pug
@@ -1,4 +1,5 @@
 extends ../layout
+include ../mixins/avatar
 include ../mixins/comment
 
 block content
@@ -31,14 +32,7 @@ block content
 
 	section.ownerInfo
 		a(href=`/users/${video.owner._id}`)
-			div.avatar.medium
-				if video.owner.avatarUrl && video.owner.avatarUrl != ''
-					if video.owner.avatarUrl.includes('http')
-						img(src=video.owner.avatarUrl)
-					else
-						img(src=`/${video.owner.avatarUrl}`)
-				else
-					i.avatar__empty
+			+avatar('medium', video.owner.avatarUrl)
 			h6=video.owner.name
 
 
